--- a/css/index.css
+++ b/css/index.css
@@ -1,31 +1,88 @@
 *{
-    font-family: arial;
+    font-family: 'STIX Two Text', serif;
+    color: black;
+    /* transition: 2s; */
 }
-body{
-    margin: 0px;
-    display: grid;
-    grid-template-areas: 
-    "header header header"
-    "aside main main"
-    "footer footer footer";
-    gap: 1rem;
-    grid-template-columns: 20vw auto auto;
-    grid-template-rows: auto 100vh auto;
+@media (max-width: 600px) {
+    body{
+        margin: 0px;
+        display: grid;
+        grid-template-areas: 
+        "header"
+        "main"
+        "footer";
+        gap: 5px;
+        grid-template-columns: auto;
+        grid-template-rows: auto 100vh auto;
+    }
+    .o-header, .o-main, .o-footer, .o-aside{
+        background: hsla(44, 25%, 51%, 1);
+
+        background: linear-gradient(90deg, hsla(44, 25%, 51%, 1) 0%, hsla(44, 25%, 51%, 1) 29%, hsla(44, 52%, 67%, 1) 100%);
+
+        background: -webkit-linear-gradient(90deg, hsla(44, 25%, 51%, 1) 0%, hsla(44, 25%, 51%, 1) 29%, hsla(44, 52%, 67%, 1) 100%);
+
+        filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#A19061", endColorstr="#A19061", GradientType=1 );
+
+    }
+    .o-header{
+        grid-area: header;
+
+        display: flex;
+        
+        position: sticky;
+        flex-direction: row;
+        justify-content: space-between;
+        top: 0;
+    }
+        
+        .o-header > .logo{
+            display: flex;
+            flex-direction: row;
+        }
+            .o-header > .logo > img{
+                align-self: center;
+                height: 5vh;
+                padding-top:1vh;
+                padding-left: 1vh;
+                padding-bottom: 1vh;
+                
+            }
+            .o-header > .logo > h4{
+                font-size: 5vw;
+                justify-self: center;
+                align-self: center;
+            }
+        .o-header > .options{
+            align-self:center ;
+
+        }
+    
+
+
+            
+    .o-main{
+        grid-area: main;
+    }
+    .o-footer{
+        grid-area: footer;
+        display: flex;
+        justify-content: space-around;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        font-size: 12px;
+    }
+    .o-footer > .center-side, .o-footer > .right-side{
+        display: none;
+    }
+    #size-blocker{
+        display: none;  
+    }
 }
-.o-header, .o-main, .o-footer, .o-aside{
-    background-color: purple;
-}
-.o-header{
-    grid-area: header;
-    color: white;
-    text-align: center;
-    align-items: center;
-    position: sticky;
-    top: 0;
-}
-.o-main{
-    grid-area: main;
-}
-.o-footer{
-    grid-area: footer;
+@media (min-width: 601px) {
+
+    #size-blocker{
+        display: block;
+        color: black;
+    }
 }
