--- a/css/index.css
+++ b/css/index.css
@@ -9,11 +9,12 @@
         display: grid;
         grid-template-areas: 
         "header"
+        "header-select"
         "main"
         "footer";
-        gap: 5px;
+        gap: 2.5px;
         grid-template-columns: auto;
-        grid-template-rows: auto 100vh auto;
+        grid-template-rows: 10vh auto 100vh auto;
     }
     .o-header, .o-main, .o-footer, .o-aside{
         background: hsla(44, 25%, 51%, 1);
@@ -49,18 +50,25 @@
                 
             }
             .o-header > .logo > h4{
-                font-size: 5vw;
+                font-size: 20px;
                 justify-self: center;
                 align-self: center;
             }
-        .o-header > .options{
-            align-self:center ;
+        .o-header > .options > img{
+            width: 50px;
+            margin-top: 10px;
+            margin-right: 10px;
 
         }
-    
-
-
-            
+        .header-select{
+            display: none;
+            grid-area: header-select;
+        }
+            .header-select > .main {
+                display: flex;
+                flex-direction: column;
+            }
+   
     .o-main{
         grid-area: main;
     }
@@ -74,6 +82,7 @@
     }
     .o-footer > .center-side, .o-footer > .right-side{
         display: none;
+        
     }
     #size-blocker{
         display: none;  
@@ -85,4 +94,6 @@
         display: block;
         color: black;
     }
+
+
 }
