--- a/css/Especialidades.css
+++ b/css/Especialidades.css
@@ -103,18 +103,29 @@ body{
                 text-shadow: -1px 3px 8px rgba(0,0,0,0.53);
             }
     
-.o-footer{
-    grid-area: footer;
-    display: flex;
-    justify-content: space-around;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    font-size: 12px;
-}
-.o-footer > .center-side, .o-footer > .right-side{
-    display: none;
-    
-}
+            .o-footer{
+                grid-area: footer;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                align-items: center;
+                padding-top: 5px;
+                font-size: 12px;
+            }
+            .o-footer > .contact > a {
+                font-size: 20px;
+            }
+            .o-footer > .contact {
+                display: flex;
+            }
+            .o-footer > .contact > .fa-instagram{
+                display: flex;
+                padding-right: 10px;
+            }
+            .o-footer > .center-side, .o-footer > .right-side{
+                display: none;
+                
+            }
 #size-blocker{
     display: none;  
 }
