--- a/css/index.css
+++ b/css/index.css
@@ -119,6 +119,7 @@ body{
     margin-top: 10px;
 }
 
+
 /*
 @media (min-width: 601px) {
 
@@ -167,6 +168,20 @@ color: goldenrod;
     position: fixed; 
     width: 45px; 
     bottom: 5px; 
+    right: 5px; 
+    z-index: 9999999999999999;
+}
+#insta-btn > img{
+    position: fixed; 
+    width: 43px; 
+    bottom: 55px; 
+    right: 5px; 
+    z-index: 9999999999999999;
+}
+#maps-btn > img{
+    position: fixed; 
+    width: 43px; 
+    bottom: 105px; 
     right: 5px; 
     z-index: 9999999999999999;
 }
